# pdf-signature

./: CLAUDE.md  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  rust.dev.Dockerfile
cryptify-back-end/: Cargo.toml
cryptify-back-end/src/: error.rs  main.rs
cryptify-front-end/: package-lock.json  package.json
cryptify-front-end/public/: electron.js  index.html  preload.js  sw.js  windowConfig.js
cryptify-front-end/src/: App.css  App.tsx  Constants.tsx  CryptFileList.css  CryptFileList.tsx  DecryptPanel.tsx  EncryptPanel.tsx  FileProvider.ts  index.tsx
cryptify-front-end/test/: sw.test.js  windowConfig.test.js
