[package]
name = "cryptify-backend"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.16.0"
chrono = { version = "0.4.44", features = ["unstable-locales"] }
lettre = "0.11.22"
log = "0.4.29"
rand = "0.10.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11.0"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.4"

tokio-util = { version = "0.7.16", features = ["compat"] }
pg-core = { version = "0.6.1", features = ["rust", "stream"] }
minreq = { version = "2.14.1", features = ["json-using-serde", "https-native"]}
